.snakemake/log/2023-03-19T214224.359075.snakemake.log
Full Traceback (most recent call last):
  File "/work/FAC/FBM/DMF/pengel/spirit/aprasad/Miniconda3/envs/snakemake_7.7/lib/python3.8/site-packages/snakemake/__init__.py", line 610, in snakemake
    workflow.include(
  File "/work/FAC/FBM/DMF/pengel/spirit/aprasad/Miniconda3/envs/snakemake_7.7/lib/python3.8/site-packages/snakemake/workflow.py", line 1236, in include
    exec(compile(code, snakefile.get_path_or_uri(), "exec"), self.globals)
  File "/scratch/aprasad/2023-pacbio_sequence_analysis/Snakefile", line 149
    16 S_fasta_sequences = config [ "database" ] [ "all_sequences" ]
       ^
SyntaxError: invalid syntax

SyntaxError in line 99 of /scratch/aprasad/2023-pacbio_sequence_analysis/Snakefile:
invalid syntax
